comments: first cull pass - delete restatement, ceremony, banners, narration
Deletes comments that a competent developer can get from the code: ceremonial
Javadoc with tautological @param/@return tags, Javadoc restating the member
name, section banners, step narration in tests, and workflow/gate-script essays
that narrate steps their own names already announce.

Surviving comments are tightened toward hidden catches only: ordering and
threading invariants, looks-wrong-but-deliberate code, why-this-value on
constants and thresholds, and caller-visible contracts.

Highlights:
  ci.yml            96 -> 29 comment lines; keeps the falsy-nightly_flags trap,
                    the `env ${FLAGS}` parse-time rule, and the additive-golden
                    wire rule. Drops the per-matrix-leg narration.
  slo-alerts.yaml   88 -> 45; keeps each threshold's measured justification,
                    drops run provenance and changelog narrative.
  ReadIndexState    90 -> 8; keeps the joint-consensus dual-majority reason.
  HeartbeatCoalescer 50 -> 14; keeps the LinkedHashMap ordering caveat.

Comments only: proven per file by stripping comments from both revisions and
comparing code bytes. 441 files, 0 code divergence. Full-reactor test-compile
green; all pom/YAML/shell files parse.

This is a first pass, not the finished cull: repo-wide comment lines are down
24% (45,540 -> 34,454), short of the delete-by-default target. Remaining volume
is listed in the working notes.

Co-Authored-By: Claude <noreply@anthropic.com>