@@ -10,35 +10,6 @@ import org.openjdk.jmh.infra.Blackhole;
 
 import java.util.concurrent.TimeUnit;
 
-/**
- * Write-commit benchmark over a real 3- or 5-node in-memory
- * Raft cluster whose nodes run a <b>real {@code ConfigStateMachine}</b> (decode command +
- * HAMT {@code put} on every apply). Unlike {@link RaftCommitBenchmark} (no-op state
- * machine), this exercises the realistic ~2-5 KB/op allocation profile of the production
- * write path, so:
- *
- * <ul>
- *   <li><b>{@code -prof gc}</b> reports the true allocation rate (B/op + MB/s) for the
- *       GC bake-off.</li>
- *   <li><b>{@code -Xlog:gc*}</b> alongside it carries a populated GC pause distribution, so
- *       a "low pause" claim for a collector is never accepted without an actual pause
- *       histogram behind it.</li>
- *   <li><b>{@code Mode.SampleTime}</b> reports the local quorum-commit latency
- *       distribution ({@code local_commit_component}) as an HdrHistogram -
- *       in-memory transport + storage, so it is the in-process consensus CPU cost,
- *       no real network, no fsync.</li>
- * </ul>
- *
- * <p><b>Coordinated omission:</b> Throughput/SampleTime here time per-invocation
- * service time with no externally-imposed arrival schedule, so coordinated omission is
- * structurally absent (same argument as the read-path JMH benches). The cross-region total
- * is {@code local_commit_component + RTT}; this benchmark proves ONLY the local component,
- * not the network leg.
- *
- * <p>Default mode is {@link Mode#Throughput}; override per phase, e.g.
- * {@code -bm sample} for the latency distribution. Run under one collector at a time and
- * state it.
- */
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.MICROSECONDS)
 @State(Scope.Thread)
@@ -50,7 +21,6 @@ public class RealApplyCommitBenchmark {
     @Param({"3"})
     int clusterSize;
 
-    /** Value payload size (the log-entry value); 256 B is a representative config value. */
     @Param({"256"})
     int valueBytes;
 
@@ -72,13 +42,9 @@ public class RealApplyCommitBenchmark {
         seq = 0;
     }
 
-    /**
-     * Propose one real PUT command and drive it through quorum replicate -> commit ->
-     * apply (HAMT put on every node). One commit per invocation.
-     */
     @Benchmark
     public void proposeCommitApply(Blackhole bh) {
-        // bounded key-space -> realistic overwrite churn (the HAMT path-copy on update)
+        // Bounded key-space for realistic HAMT path-copy churn on overwrite.
         String key = "config/service/bench/" + ((seq++) & 0xFFFFF);
         byte[] command = CommandCodec.encodePut(key, value);
         ProposeOutcome out = leader.propose(command);
